# 2048game

./: CMakeLists.txt
src/: game2048.cpp  game2048.hpp  mainwindow.cpp  mainwindow.hpp
tests/: CMakeLists.txt
tests/game2048_test/: game2048_test.cpp  game2048_test.hpp  main.cpp
